syntax = "proto3";

package FileTransfer;

option csharp_namespace = "ShubarinSummerPracticeGRPC";

service FileTransferService {
  rpc DownloadFile(FileRequest) returns (stream ChunkMsg);
}

message ChunkMsg {
  string FileName = 1;
  int64 FileSize = 2;
  string Md5Cache = 3;

  int32 ChunkSize = 4;
  bytes Chunk = 5;

  bool IsCanceled = 6;

}

message FileRequest {
  string FilePath = 1;
}