syntax = "proto3";

option csharp_namespace = "grpc_client";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service FileTransferService {
  rpc DownloadFile(FileRequest) returns (stream ChunkMsg);
}

message ChunkMsg {
  string FileName = 1;
  int64 FileSize = 2;
  bytes Chunk = 3;
}

message FileRequest {
  string FilePath = 1;
}